--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<style>
 		table{
+			border: 1px solid black;
 			border-collapse;
 			width: 100%;
 			background-color: yellow;
